add record controller